[tool.poetry]
name = "servo-put"
version = "0.1.0"
description = ""
authors = ["Blake Watters <blake@opsani.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^5.3.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
